# -trivy-plugin-explicit-dependency

./: Cargo.toml  README.md  plugin.yaml  trivy-explicit-dependency  trivy-explicit-dependency_shell
.cargo/: config.toml
.github/workflows/: semgrep.yml
src/: main.rs
